# expressive-cpp17-coding-challenge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: main.cpp
test/: expressive_cpp17_before.csv
tests/: CMakeLists.txt  test.cpp
tests/data/: expressive_cpp17_after.csv
